fastrace-macro/tests/ui/err/trace-interleaved.stderr
error: expected identifier
 --> tests/ui/err/trace-interleaved.rs:6:9
  |
6 | #[trace(struct)]
  |         ^^^^^^
